Fix item frame culling not working when using Sodium - Some cleanup